--- a/HTML & CSS Website Project/index.html
+++ b/HTML & CSS Website Project/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-     <title>Webpage Design</title>
+     <title>Webpage Design BY MAOK</title>
      <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -33,15 +33,36 @@
                     <span>
                          Development
                     </span>
-                    <br>Course
+                    <br>By Maok
                </h1>
                <p class="par">
                     Lorem ipsum dolor sit amet, consectetur adipisicing elit. Libero nostrum est quidem error? 
                     <br>Aspernatur, aliquam quibusdam incidunt hic minus officiis laboriosam cupiditate  
-                    <br>neque necessitatibus unde atque reprehenderit quia sed delectus.</p>
+                    <br>neque necessitatibus unde atque reprehenderit quia sed delectus.
+               </p>
 
-                    <button class="cn"><a href="#">JOIN US</a></button>
+               <button class="cn"><a href="#">JOIN US</a></button>
+
+               <div class="form">
+                    <h2>Login Here</h2>
+                    <input type="email" name="email" placeholder="Enter Your Email">
+                    <input type="password" name="" placeholder="Enter Your Password">
+                    <button class="btnn"><a href="#">Login</a></button>
+
+                    <p class="link">Don't have an account<br>
+                    <a href="#">Sign up </a> here</a></p>
+                    <p class="liw">Login with</p>
+
+                    <div class="icons">
+                         <a href="#"><ion-icon name="logo-facebook"></ion-icon></a>
+                         <a href="#"><ion-icon name="logo-instagram"></ion-icon></a>
+                         <a href="#"><ion-icon name="logo-twitter"></ion-icon></a>
+                         <a href="#"><ion-icon name="logo-google"></ion-icon></a>
+                         <a href="#"><ion-icon name="logo-github"></ion-icon></a>
+                    </div>
+               </div>    
           </div>
      </div>    
+     <script src="https://unpkg.com/ionicons@5.4.0/dist/ionicons.js"></script>
 </body>
 </html>
