--- a/Funny Login Page Project/index.html
+++ b/Funny Login Page Project/index.html
@@ -6,7 +6,7 @@
      <meta name="viewport" content="width=device-width, initial-scale=1.0">
      <title>Funny Login-Page</title>
 
-<link rel="stylesheet" href="style.css">
+     <link rel="stylesheet" href="style.css">
 
 </head>
 <body>
@@ -24,8 +24,9 @@
 
                <input type="submit" id="submit-btn" value="Sign Up" onmouseover="mouseOver()">
           </form>
-
      </div>
+
+     <script src="script.js"></script>
      
 </body>
 </html>
