--- a/Funny Login Page Project/submitted.html
+++ b/Funny Login Page Project/submitted.html
@@ -7,12 +7,13 @@
      <title>Submitted</title>
 
      <link rel="stylesheet" href="style.css">
-     <script src="https://kit.fontawesome.com/3a3e121ecf.js" crossorigin="anonymous"></script>
+     <link rel="stylesheet" href="site/css/font-awesome.min.css">
+     <!-- <script src="https://kit.fontawesome.com/3a3e121ecf.js" crossorigin="anonymous"></script> -->
 </head>
 <body>
 
 <div class="submit-div">
-     <span><i class="fa-regular fa-circle-check fa-bounce"></i> <h1>Submitted!</h1></span>
+     <span><i class="fa fa-check-circle fa-bounce"></i><h1>Submitted!</h1></span>
 </div>    
 
      
